# rust-architecture-visualizer

./: .gitignore  Cargo.toml  README.md  USAGE.md  setup-git.sh
docs/: API.md  CONFIGURATION.md
examples/: basic_usage.rs  custom_config.rs
src/: lib.rs  main.rs  types.rs
src/config/: mod.rs  project_config.rs
src/scanner/: dependency_analyzer.rs  metrics_calculator.rs  mod.rs  rust_scanner.rs
src/visualizer/: html_generator.rs  mod.rs  svg_renderer.rs
src/web/: handlers.rs  mod.rs  server.rs  websocket.rs
