[package]
name = "rust-architecture-visualizer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A beautiful, real-time architecture visualizer for Rust projects"
license = "MIT"
repository = "https://github.com/yourusername/rust-architecture-visualizer"
keywords = ["rust", "architecture", "visualization", "dependencies", "analysis"]
categories = ["development-tools", "web-programming"]

[[bin]]
name = "rust-arch-viz"
path = "src/main.rs"

[lib]
name = "rust_architecture_visualizer"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "compression-gzip", "trace"] }

# WebSocket support
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# File system and path handling
walkdir = "2.3"
glob = "0.3"

# Regex for code analysis
regex = "1.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Caching
lru = "0.12"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# File watching - make it optional
notify = { version = "6.1", optional = true }

# Async traits
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[features]
default = ["web", "cli"]
web = []
cli = []
watch = ["notify"]
